# wagicGPT

./: .gitignore  BUILD_VITA.md  CMakeLists.txt  build_vita.sh  download_card_images.py
JGE/include/: JGE.h  JRenderer.h  JSoundSystem.h  JTypes.h
JGE/src/: JFileSystem.cpp  JGE.cpp  JLBFont.cpp  JTTFont.cpp  Vitamain.cpp
JGE/src/hge/: hgefont.cpp
JGE/src/pc/: JGfx.cpp  JSfx.cpp
projects/mtg/: wagic-SDL.pro  wagic.pri
projects/mtg/include/: AIPlayerBaka.h  AIPlayerGPT.h  ActionLayer.h  AllAbilities.h  CardDescriptor.h  MTGAbility.h  MTGDeck.h  MTGDefinitions.h  TestSuiteAI.h  WResourceManagerImpl.h  utils.h
projects/mtg/src/: AIPlayer.cpp  AIPlayerBaka.cpp  AIPlayerGPT.cpp  ActionLayer.cpp  ActionStack.cpp  AllAbilities.cpp  CardDescriptor.cpp  CardGui.cpp  Damage.cpp  DeckManager.cpp  DeckView.cpp  GameApp.cpp  GameOptions.cpp  GameStateDeckViewer.cpp  GameStateDuel.cpp  GameStateMenu.cpp  GuiCombat.cpp  MTGAbility.cpp  MTGCardInstance.cpp  MTGDefinitions.cpp  MTGGameZones.cpp  MTGRules.cpp  OptionItem.cpp  Player.cpp  TargetChooser.cpp  TargetsList.cpp  TestSuiteAI.cpp  TranslateKeys.cpp  WCachedResource.cpp  WFont.cpp  WGui.cpp  WParsedInt.cpp  WResourceManager.cpp  utils.cpp
vita/sce_sys/livearea/contents/: template.xml
